[GStreamer] Fail gracefully in the absence of a WebVTT encoder. https://bugs.webkit.org/show_bug.cgi?id=209290

Reviewed by Philippe Normand.

Covered by existing tests.

* platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::initializeGStreamer): Gets rid of "plugin not found"
errors. It's not an error to have potentially broken AAC decoders,
but it's nice to give a clear warning.
* platform/graphics/gstreamer/TextCombinerGStreamer.cpp:
(webkit_text_combiner_class_init):
(webkitTextCombinerNew): Check for the "subenc" *plugin*. This
check indirectly tells us the "webvttenc" *element* will exist.


Canonical link: https://commits.webkit.org/222337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258832 268f45cc-cd09-0410-ab3c-d52691b4dbfc