Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp
@@ -258,18 +258,18 @@ bool initializeGStreamer(Optional<Vector<String>>&& options)
         // If the FDK-AAC decoder is available, promote it and downrank the
         // libav AAC decoders, due to their broken LC support, as reported in:
         // https://ffmpeg.org/pipermail/ffmpeg-devel/2019-July/247063.html
-        GRefPtr<GstElement> aacDecoder = gst_element_factory_make("fdkaacdec", nullptr);
-        if (aacDecoder) {
-            GstElementFactory* factory = gst_element_get_factory(aacDecoder.get());
-            gst_plugin_feature_set_rank(GST_PLUGIN_FEATURE_CAST(factory), GST_RANK_PRIMARY);
+        GRefPtr<GstElementFactory> elementFactory = adoptGRef(gst_element_factory_find("fdkaacdec"));
+        if (elementFactory) {
+            gst_plugin_feature_set_rank(GST_PLUGIN_FEATURE_CAST(elementFactory.get()), GST_RANK_PRIMARY);
 
             const char* const elementNames[] = {"avdec_aac", "avdec_aac_fixed", "avdec_aac_latm"};
             for (unsigned i = 0; i < G_N_ELEMENTS(elementNames); i++) {
-                GRefPtr<GstElement> avAACDecoder = gst_element_factory_make(elementNames[i], nullptr);
-                if (avAACDecoder)
-                    gst_plugin_feature_set_rank(GST_PLUGIN_FEATURE_CAST(gst_element_get_factory(avAACDecoder.get())), GST_RANK_MARGINAL);
+                GRefPtr<GstElementFactory> avAACDecoderFactory = adoptGRef(gst_element_factory_find(elementNames[i]));
+                if (avAACDecoderFactory)
+                    gst_plugin_feature_set_rank(GST_PLUGIN_FEATURE_CAST(avAACDecoderFactory.get()), GST_RANK_MARGINAL);
             }
-        }
+        } else
+            WTFLogAlways("WARNING: You might have broken LC support in your AAC decoders, consider installing fdkaacdec");
 
 #endif
     });
